<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_height="50dp">

    <HorizontalScrollView
        android:id="@+id/xx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_dongeng"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_bottomm"
                android:padding="5dp"
                android:text="@string/btn_dongeng"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_legenda"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_bottomm"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/btn_legenda"
                android:textColor="#fff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_hikayat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_bottomm"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/btn_hikayat"
                android:textColor="#fff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_ceritarakyat"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_bottomm"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/btn_ceritarakyat"
                android:textColor="#fff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_mitos"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/rounded_bottomm"
                android:padding="10dp"
                android:text="@string/btn_mitos"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="12sp" />



        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>